--- a/src/sass/profile/photo-rail.scss
+++ b/src/sass/profile/photo-rail.scss
@@ -58,6 +58,7 @@
 @include create-toggle(photo-rail-grid, 640px);
 #photo-rail-grid-toggle:checked ~ .photo-rail-grid {
     padding-bottom: 12px;
+    max-height: none;
 }
 
 @media(max-width: 700px) {
@@ -80,9 +81,6 @@
         grid-template-columns: repeat(6, 1fr);
     }
 
-    #photo-rail-grid-toggle:checked ~ .photo-rail-grid {
-        max-height: 300px;
-    }
 }
 
 @media(max-width: 450px) {
@@ -90,7 +88,4 @@
         grid-template-columns: repeat(4, 1fr);
     }
 
-    #photo-rail-grid-toggle:checked ~ .photo-rail-grid {
-        max-height: 450px;
-    }
 }
