--- a/src/sass/tweet/_base.scss
+++ b/src/sass/tweet/_base.scss
@@ -11,15 +11,19 @@
 .tweet-body {
   flex: 1;
   min-width: 0;
-  margin-left: 58px;
+  margin-left: 0px;
   pointer-events: none;
   z-index: 1;
 }
 
 .tweet-content {
-  line-height: 1.3em;
+  font-family: sans-serif;
+  line-height: 1.5em;
   pointer-events: all;
-  display: inline;
+}
+
+.before-tweet .tweet-body > *:not(:first-child):not(:last-child) {
+  margin-left: 50px;
 }
 
 .tweet-bidi {
@@ -30,7 +34,11 @@
   padding: 0;
   vertical-align: bottom;
   flex-basis: 100%;
-  margin-bottom: 0.2em;
+  margin-bottom: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: unset;
+  gap: 1px;
 
   a {
     display: inline-block;
@@ -41,6 +49,7 @@
 }
 
 .tweet-name-row {
+  flex: 1;
   padding: 0;
   display: flex;
   justify-content: space-between;
@@ -49,16 +58,20 @@
 .fullname-and-username {
   display: flex;
   min-width: 0;
+  flex-direction: column;
 }
 
 .fullname {
-  @include ellipsis;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   flex-shrink: 2;
   max-width: 80%;
   font-size: 14px;
   font-weight: 700;
   color: var(--fg_color);
-}
+  margin-left: .4em;
+  margin-top: .4em;
+  }
 
 .username {
   @include ellipsis;
@@ -81,7 +94,7 @@
 
 .tweet-published {
   margin: 0;
-  margin-top: 5px;
+  margin-top: 10px;
   color: var(--grey);
   pointer-events: all;
 }
@@ -90,9 +103,8 @@
   display: contents !important;
 
   img {
-    float: left;
     margin-top: 3px;
-    margin-left: -58px;
+    margin-left: 0px;
     width: 48px;
     height: 48px;
   }
@@ -107,9 +119,9 @@
   &.mini {
     position: unset;
     margin-right: 5px;
-    margin-top: -1px;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
+    align-self: end;
   }
 }
 
@@ -127,7 +139,6 @@
   .tweet-body {
     display: flex;
     flex-direction: column;
-    max-height: calc(100vh - 0.75em * 2);
   }
 
   .card-image img {
@@ -195,6 +206,7 @@
 
   span {
     @include ellipsis;
+    line-height: 1;
   }
 }
 
@@ -203,8 +215,10 @@
 }
 
 .tweet-stats {
-  margin-bottom: -3px;
+  margin-bottom: 3px;
   -webkit-user-select: none;
+  justify-content: space-around;
+  display: flex;
 }
 
 .tweet-stat {
