--- a/src/sass/tweet/card.scss
+++ b/src/sass/tweet/card.scss
@@ -2,9 +2,9 @@
 @import '_mixins';
 
 .card {
+    flex: 1;
     margin: 5px 0;
     pointer-events: all;
-    max-height: unset;
 }
 
 .card-container {
@@ -82,7 +82,6 @@
     img {
         width: 100%;
         height: 100%;
-        max-height: 400px;
         display: block;
         object-fit: cover;
     }
