--- a/src/sass/tweet/media.scss
+++ b/src/sass/tweet/media.scss
@@ -7,8 +7,8 @@
   align-items: center;
   overflow: hidden;
   flex-grow: 1;
-  max-height: 379.5px;
-  max-width: 533px;
+  height: 100%;
+  width: 100%;
   pointer-events: all;
 
   .still-image {
@@ -18,15 +18,12 @@
 }
 
 .attachments {
-  margin-top: 0.35em;
+  margin-top: 1em;
   display: flex;
   flex-direction: row;
-  width: 100%;
-  max-height: 600px;
   border-radius: 7px;
   overflow: hidden;
   flex-flow: column;
-  background-color: var(--bg_color);
   align-items: center;
   pointer-events: all;
 
@@ -46,25 +43,19 @@
 
   &:last-child {
     margin: 0;
-    max-height: 530px;
   }
 }
 
 .gallery-gif video {
-  max-height: 530px;
   background-color: #101010;
 }
 
 .still-image {
-  max-height: 379.5px;
-  max-width: 533px;
   justify-content: center;
 
   img {
     object-fit: cover;
     max-width: 100%;
-    max-height: 379.5px;
-    flex-basis: 300px;
     flex-grow: 1;
   }
 }
@@ -87,14 +78,12 @@
 
 .overlay-circle {
   border-radius: 50%;
-  background-color: var(--dark_grey);
+  background-color: #333333;
   width: 40px;
   height: 40px;
   align-items: center;
   display: flex;
-  border-width: 5px;
-  border-color: var(--play_button);
-  border-style: solid;
+  border: none;
 }
 
 .overlay-triangle {
@@ -102,8 +91,8 @@
   height: 0;
   border-style: solid;
   border-width: 12px 0 12px 17px;
-  border-color: transparent transparent transparent var(--play_button);
-  margin-left: 14px;
+  border-color: transparent transparent transparent white;
+  margin-left: 18px;
 }
 
 .media-gif {
