--- a/src/sass/tweet/video.scss
+++ b/src/sass/tweet/video.scss
@@ -2,7 +2,7 @@
 @import "_mixins";
 
 video {
-  height: 100%;
+  max-height: 100%;
   width: 100%;
 }
 
@@ -19,8 +19,10 @@ video {
 .video-container {
   min-height: 80px;
   min-width: 200px;
-  max-height: 530px;
   margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   img {
     max-height: 100%;
@@ -30,7 +32,6 @@ video {
 
 .video-overlay {
   @include play-button;
-  background-color: $shadow;
 
   p {
     position: relative;
@@ -45,10 +46,10 @@ video {
   .overlay-circle {
     position: relative;
     z-index: 0;
-    top: calc(50% - 20px);
+    top: calc(50% - 25px);
     margin: 0 auto;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
   }
 
   .overlay-duration {
